sdm710-common: rootdir: Override hwcomposer service definition
 * CAF added a socket creation to hwcomposer service for post-processing
   blobs to work. As AOSP interface does not have this, some display
   features such as SVI configuration is broken and hwcomposer will crash
   after adding it on boot. Instead of relying on framework fixes, we can
   just override service definition and create the socket in this way.

 * Reference: https://github.com/AOSPA/android_hardware_interfaces/commit/73a427f95e231a46c2274d51abfec21bd2d316f1

Change-Id: I08ad6f808e566f9b35c932db473cd5dbf3af262a
Signed-off-by: Albert I <kras@raphielgang.org>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -626,3 +626,12 @@ service vendor.power /vendor/bin/hw/android.hardware.power-service-qti
     class hal
     user system
     group system input
+
+service vendor.hwcomposer-2-3 /vendor/bin/hw/android.hardware.graphics.composer@2.3-service
+    class hal animation
+    user system
+    group graphics drmrpc
+    capabilities SYS_NICE
+    onrestart restart surfaceflinger
+    socket pps stream 0660 system system
+    writepid /dev/cpuset/system-background/tasks
