--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -608,3 +608,15 @@ on property:init.svc.vendor.hwcomposer-2-3=restarting
 on property:vold.decrypt=trigger_restart_framework && property:ro.crypto.type=block && property:persist.ppd.fde.config=0
     setprop persist.ppd.fde.config 1
     start ppd
+
+service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
+    override
+    class hal
+    user audioserver
+    # media gid needed for /dev/fm (radio) and for /data/misc/media (tee)
+    group audio camera drmrpc inet media mediadrm net_bt net_bt_admin net_bw_acct wakelock context_hub
+    capabilities BLOCK_SUSPEND
+    ioprio rt 4
+    socket audio_hw_socket seqpacket 0666 system system
+    task_profiles ProcessCapacityHigh HighPerformance
+    onrestart restart audioserver
