sdm710-common: Start bootanimation on post-fs
Signed-off-by: Albert I <kras@raphielgang.org>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -56,6 +56,13 @@ on fs
     mkdir /mnt/vendor/persist/wlan_bt 0755 system system
 
 on post-fs
+    # Start service for bootanim
+    start surfaceflinger
+    start bootanim
+    start vendor.hwcomposer-2-3
+    start vendor.configstore-hal
+    start vendor.qti.hardware.display.allocator
+
     chmod 0755 /sys/kernel/debug/tracing
 
     write /dev/ipa 1
