--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -70,8 +70,6 @@ on boot
     write /dev/cpuset/system-background/cpus 0-7
 
 on property:init.svc.vendor.charger=running
-    setprop persist.sys.usb.config mass_storage
-
     # Keep one LITTLE and one big
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
@@ -79,7 +77,6 @@ on property:init.svc.vendor.charger=running
     write /sys/devices/system/cpu/cpu4/online 0
     write /sys/devices/system/cpu/cpu5/online 0
     write /sys/devices/system/cpu/cpu7/online 0
-    wait /dev/block/bootdevice
 
     # Enable UFS powersaving
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkgate_enable 1
@@ -89,19 +86,14 @@ on property:init.svc.vendor.charger=running
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
 
     write /sys/module/msm_thermal/parameters/enabled "N"
-    symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
-    mkdir /mnt/vendor/persist
-    chown root system /mnt/vendor/persist
-    chmod 0771 /mnt/vendor/persist
+
+    wait /dev/block/platform/soc/${ro.boot.bootdevice}/by-name/persist
     mount ext4 /dev/block/bootdevice/by-name/persist /persist nosuid nodev barrier=1
 
     start vendor.hvdcp_opti
-    start vendor.power_off_alarm
-    start vendor.poweroffm64
     mount tmpfs tmpfs /data
-    start vendor.thermal-engine
-    setprop vendor.usb.controller a600000.dwc3
-    setprop sys.usb.configfs 1
+    start thermal-engine
+    start vendor.power_off_alarm
 
 on enable-low-power
     # Set the default IRQ affinity to the silver cluster.
@@ -236,8 +228,3 @@ service vendor.power_off_alarm /vendor/bin/power_off_alarm
     group system
     disabled
     oneshot
-
-service vendor.poweroffm64 /vendor/bin/poweroffm64
-    class late_start
-    oneshot
-    seclabel u:r:poweroffm64:s0
